# hyperline-samples

./: README.md
jupyter/: 50_Query_Ethereum_Txs_Contracts.py  51_Query_Sui_Transactions.py  52_Query_Bitcoin_Blocks.py  53_Query_Polygon_Blocks.py  60_Join_Ethereum_Txs_Contracts.py  70_Query_Eth_Token_Transfers.py  basic_sql_access.ipynb  download_uniswap_pool.ipynb  query_flipside_data.ipynb  read_data_from_graphql.ipynb  save_data.ipynb  sql_access.ipynb  trino2bq.ipynb  usdc2.ipynb  usdc_analysis.ipynb
spark-sdk/: .gitignore  README.md  pyproject.toml  requirements.txt
spark-sdk/scripts/: create_cluster.sh  create_cluster_big2.sh  create_cluster_simple.sh  install_sdk.sh  mlvm_light.sh
spark-sdk/src/hyperline/: __init__.py
spark-sdk/src/hyperline/datasets/: __init__.py  _bigquery.py
spark-sdk/src/hyperline/pipeline/: __init__.py  _datasources.py  _destinations.py  _helper.py
spark-sdk/src/hyperline/sql/: __init__.py  _api_flipside.py  _api_trino.py
spark-sdk/src/hyperline/storage/: __init__.py  _helper.py  _postgres.py
