[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperline"
version = "0.0.3"
authors = [
  { name="Stanislav Pak", email="stanislav@asynclabs.xyz" },
]
description = "Hyperline Python SDK for crypto datasets and processing primitives"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'py4j==0.10.9.5',
  'pyspark==3.3.1'
]

[project.urls]
"Homepage" = "https://github.com/asynclabsxyz/hyperline-developers"
"Bug Tracker" = "https://github.com/asynclabsxyz/tbd"
